# gigsl

./: .gitignore  README.md  meson.build  meson_options.txt
.github/workflows/: ci.yml
docs/reference/: gigsl-docs.xml  meson.build  version.xml.in
ggsl/: ggsl-block.c  ggsl-block.h  ggsl-vector.c  ggsl-vector.h  ggsl.h  meson.build
gigsl/: gigsl-block-double.c  gigsl-block-double.h  gigsl-block.c.in  gigsl-block.h  gigsl-block.h.in  gigsl-matrix.c.in  gigsl-matrix.h  gigsl-matrix.h.in  gigsl-sys.h  gigsl-vector.c  gigsl-vector.c.in  gigsl-vector.h  gigsl-vector.h.in  gigsl.h  meson.build
test/: meson.build  test-matrix.c  test-vector.c
test/test-introspection/: meson.build  test-basic.py  test-block-double.py  test-matrix.py
test/test-introspection-python/: meson.build  test-basic.py  test-block-double.py  test-matrix.py
test/test-introspection-repository/: meson.build  test-basic.c
