option('gtk_doc', type: 'boolean', value: true, description: 'Enable or disable generating the API reference (depends on GTK-Doc)')
option('enable_profiling', type: 'boolean', value: false)

option('introspection', type: 'boolean', value : true, description: 'Enable or disable GObject Introspection')
option('python2_girdir', type: 'string', value : 'auto', description : 'Installation dir for PyGObject2 overrides (default = auto, no disables python2)')
option('python3_girdir', type: 'string', value : 'auto', description : 'Installation dir for PyGObject3 overrides (default = auto, no disables python3)')
option('enable_tests',
  type: 'boolean', value: true,
  description: 'Whether to compile unit tests')
option('python',
  type: 'string',
  value: 'python3',
  description: 'Path or name of the Python interpreter to build for'
)
option('package_subdir', type: 'string', value: '',
  description: 'Subdirectory to append to all installed files, for use as subproject'
)
option('gtk_doc', type: 'boolean', value: false,
  description : 'Build API reference and tools documentation')

